Fixed Small Details
- Fixed transition bottom text (hopefully visible on mobile)
- finally fixed error 404 page (at least I hope [on mobile at least]). Main text was white this entire time
- Added new background image for "contact me" page (background now should not cut off on mobile screens)
- fixed "about me" text boxes. Now should be centered, so it should look good on mobile
- changed tab names so they all don't read "Wyatt Wilson"... example: "about" page isn't called "wyatt wilson" when you hover over the tab itself
- plans to maybe change folder name from "contactMe" to "about" to avoid any confusion...  up to debate for now

--- a/css/about.css
+++ b/css/about.css
@@ -91,6 +91,15 @@ figure figcaption {
   float: right;
   background: #f3f3f3;
 }
+
+.alignCenterInlineBorder
+{
+  border: 2px solid rgb(0, 0, 0);
+  display: block;
+  margin: 10px;
+  float: center;
+  background: #f3f3f3;
+}
 /*below taken from W3SCHOOLS https://www.w3schools.com/howto/howto_css_style_header.asp*/
 .standardHeader {
   padding: 25px;
